--- a/wwwroot/jabber.se/jabber.se.css
+++ b/wwwroot/jabber.se/jabber.se.css
@@ -25,7 +25,7 @@ div#title {
     text-align: center;
 }
 
-div#menu {
+div#menu_bar {
     height: 45px;
     background-color: #e7e7e7;
     padding-left: 10px;
@@ -35,6 +35,11 @@ div#menu {
     margin-bottom: 0px;
     margin-left: auto;
     margin-right: auto;
+}
+
+div#menu_bar_left {
+    float: right;
+    padding: 0px 10px 0px 10px;
 }
 
 
@@ -63,7 +68,15 @@ div#menu {
     background-color: #f1fff1;
 }
 
-div#body {
+a.atom_icon {
+    padding: 0px 0px 0px 16px;
+    width: 32px;
+    height: 32px;
+    text-decoration: none;
+    background: url("/res/atom16.png") no-repeat 0 50%;
+}
+
+div#page_body {
     position: relative;
     background-color: #f7f7f7;
     padding: 20px;
