Change "*_left" to "*_right" to correspond to the actual position.

--- a/wwwroot/jabber.se/jabber.se.css
+++ b/wwwroot/jabber.se/jabber.se.css
@@ -37,7 +37,7 @@ div#menu_bar {
     margin-right: auto;
 }
 
-div#menu_bar_left {
+div#menu_bar_right {
     float: right;
     padding: 0px 10px 0px 10px;
 }
