--- a/wwwroot/jabber.se/jabber.se.css
+++ b/wwwroot/jabber.se/jabber.se.css
@@ -68,6 +68,10 @@ div#menu_bar_right {
     background-color: #f1fff1;
 }
 
+a {
+    text-decoration: none;
+}
+
 a.atom_icon {
     padding: 0px 0px 0px 16px;
     width: 32px;
@@ -103,7 +107,7 @@ div#page_body {
 }
 
 div#footer {
-    padding: 20px;
+    padding: 10px 20px 24px 20px;
     font-size: 12px;
     font-style: italic;
     background-color: #f2f2f2;
@@ -114,6 +118,73 @@ div#footer {
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
 }
+
+div#footer_left {
+    float: left;
+}
+
+div#footer_right {
+    float: right;
+}
+
+
+div#footer_right_container {
+    position: relative;
+    padding: 0px 20px 0px 0px;
+}
+
+div.dialog {
+    -moz-border-radius-topleft: 20px;
+    -moz-border-radius-topright: 20px;
+    -webkit-border-top-left-radius: 20px;
+    -webkit-border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-radius: 20px;
+
+    -moz-box-shadow: 3px 3px 3px 3px #666;
+    -webkit-box-shadow: 3px 3px 3px 3px #666;
+    box-shadow: 0px 0px 3px 0px #666;
+
+    /*-moz-box-shadow: 3px 3px 3px #666;
+    -webkit-box-shadow: 3px 3px 3px #666;
+    box-shadow: 3px 3px 3px #666;*/
+
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    
+    /*display: none;*/
+}
+
+div.dialog_content {
+    /*display: inline;*/
+}
+
+.dialog_trigger {
+    -moz-box-shadow: 3px 3px 3px 3px #666;
+    -webkit-box-shadow: 3px 3px 3px 3px #666;
+    box-shadow: 0px 0px 3px 0px #666;
+
+    background-color: #000;
+    color: #fff;
+    opacity: 0.9;
+}
+
+.warning_title {
+    color: #f35555;
+}
+
+div#page__login_dialog {
+    position: absolute;
+    height: 200px;
+    width: 200px;
+    top: -250px;
+    right: 20px;
+    padding: 20px;
+}
+
+
 
 div.panel {
 }
