--- a/wwwroot/jabber.se/jabber.se.css
+++ b/wwwroot/jabber.se/jabber.se.css
@@ -1,8 +1,56 @@
-html {overflow-y: scroll;}
+
+/*
+ * Base styles
+ */
+
+html {
+    overflow-y:
+    scroll;
+}
 
 body {
     font-family: sans-serif;
 }
+
+a {
+    text-decoration: none;
+}
+
+span.contact {
+    font-weight: bold;
+}
+
+ul.contact {
+    list-style-type: none;
+    padding-left: 10px;
+}
+
+.body a:link  {
+    color: #5f5f5f;
+    text-decoration: none;
+}
+
+.body a:active {
+    color: #5f5f5f;
+    text-decoration: none;
+}
+
+.body a:visited {
+    color: #5f5f5f;
+    text-decoration: none;
+}
+
+.body a:hover {
+    color: #5f8f5f;
+}
+
+.center {
+    text-align: center;
+}
+
+/*
+ * Basic elements
+ */
 
 div#page {
     width: 800px;
@@ -42,6 +90,42 @@ div#menu_bar_right {
     padding: 0px 10px 0px 10px;
 }
 
+div#page_body {
+    position: relative;
+    background-color: #f7f7f7;
+    padding: 20px;
+    font-size: 14px;
+}
+
+div#footer {
+    padding: 10px 20px 24px 20px;
+    font-size: 12px;
+    font-style: italic;
+    background-color: #f2f2f2;
+    -moz-border-radius-bottomleft: 20px;
+    -moz-border-radius-bottomright: 20px;
+    -webkit-border-bottom-left-radius: 20px;
+    -webkit-border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+div#footer_left {
+    float: left;
+}
+
+div#footer_right {
+    float: right;
+}
+
+div#footer_right_container {
+    position: relative;
+    padding: 0px 20px 0px 0px;
+}
+
+/*
+ * Menu related
+ */
 
 #menu ul {
     margin:0;
@@ -68,9 +152,9 @@ div#menu_bar_right {
     background-color: #f1fff1;
 }
 
-a {
-    text-decoration: none;
-}
+/*
+ * Feed atom
+ */
 
 a.atom_icon {
     padding: 0px 0px 0px 16px;
@@ -80,114 +164,61 @@ a.atom_icon {
     background: url("/res/atom16.png") no-repeat 0 50%;
 }
 
-div#page_body {
+/*
+ * State panel
+ */
+
+div.state_panel {
     position: relative;
-    background-color: #f7f7f7;
+}
+
+div.state_panel_alt {
     padding: 20px;
-    font-size: 14px;
 }
 
-.body a:link  {
-    color: #5f5f5f;
-    text-decoration: none;
+/****
+ * UI elements
+ ****/
+
+/*
+ * Login state panel
+ */
+
+.login_input {
+    display: block;
+    width: 90%;
 }
 
-.body a:active {
-    color: #5f5f5f;
-    text-decoration: none;
-}
+div.wfid_login_panel {
+    /* position */
+    position: absolute;
+    width: 220px;
+    right: 20px;
+    bottom: 40px;
 
-.body a:visited {
-    color: #5f5f5f;
-    text-decoration: none;
-}
-
-.body a:hover {
-    color: #5f8f5f;
-}
-
-div#footer {
-    padding: 10px 20px 24px 20px;
-    font-size: 12px;
-    font-style: italic;
-    background-color: #f2f2f2;
-    -moz-border-radius-bottomleft: 20px;
-    -moz-border-radius-bottomright: 20px;
-    -webkit-border-bottom-left-radius: 20px;
-    -webkit-border-bottom-right-radius: 20px;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-
-div#footer_left {
-    float: left;
-}
-
-div#footer_right {
-    float: right;
-}
-
-
-div#footer_right_container {
-    position: relative;
-    padding: 0px 20px 0px 0px;
-}
-
-div.dialog {
-    -moz-border-radius-topleft: 20px;
-    -moz-border-radius-topright: 20px;
-    -webkit-border-top-left-radius: 20px;
-    -webkit-border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    border-bottom-left-radius: 20px;
+    /* style */
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
     border-radius: 20px;
 
-    -moz-box-shadow: 3px 3px 3px 3px #666;
-    -webkit-box-shadow: 3px 3px 3px 3px #666;
-    box-shadow: 0px 0px 3px 0px #666;
-
-    /*-moz-box-shadow: 3px 3px 3px #666;
+    -moz-box-shadow: 3px 3px 3px #666;
     -webkit-box-shadow: 3px 3px 3px #666;
-    box-shadow: 3px 3px 3px #666;*/
+    box-shadow: 3px 3px 3px #666;
 
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
-    
-    /*display: none;*/
-}
 
-div.dialog_content {
-    /*display: inline;*/
-}
-
-.dialog_trigger {
-    -moz-box-shadow: 3px 3px 3px 3px #666;
-    -webkit-box-shadow: 3px 3px 3px 3px #666;
-    box-shadow: 0px 0px 3px 0px #666;
-
-    background-color: #000;
-    color: #fff;
-    opacity: 0.9;
-}
-
-.warning_title {
-    color: #f35555;
-}
-
-div#page__login_dialog {
-    position: absolute;
-    height: 200px;
-    width: 200px;
-    top: -250px;
-    right: 20px;
-    padding: 20px;
+    padding-bottom: 20px;
 }
 
 
-
-div.panel {
+img.wfid_login_spinner {
+    padding-top: 40px;
 }
+
+/*
+ * Blog content
+ */
 
 p.blog_body {
     font-size: 14px;
@@ -200,14 +231,5 @@ label.blog_title {
 span.blog_by {
     font-size: 11px;
     color: #a0a0a0;
-}
-
-span.contact {
-    font-weight: bold;
-}
-
-ul.contact {
-    list-style-type: none;
-    padding-left: 10px;
 }
 
