--- a/wwwroot/jabber.se/jabber.se.css
+++ b/wwwroot/jabber.se/jabber.se.css
@@ -74,20 +74,31 @@ div#title {
 }
 
 div#menu_bar {
-    height: 45px;
-    background-color: #e7e7e7;
+    position: relative;
+    height: 40px;
+
     padding-left: 10px;
     padding-right: 10px;
     padding-top: 0px;
+
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: auto;
     margin-right: auto;
+
+    background-color: #e7e7e7;
+}
+
+div#menu {
+    position: absolute;
+    bottom: 0px;
 }
 
 div#menu_bar_right {
-    float: right;
-    padding: 0px 10px 0px 10px;
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    padding: 10px 10px 0px 10px;
 }
 
 div#page_body {
@@ -144,12 +155,17 @@ div#footer_right_container {
     color: black;
     background-color: #e7e7e7;
     margin: 0;
-    padding: 2px 10px 2px 10px;
+    padding: 5px 10px 6px 10px;
     text-decoration: none;
 }
 
-#menu a:hover, #menu li .current {
+#menu a.current {
     background-color: #f1fff1;
+}
+
+
+#menu a:hover {
+    background-color: #fbfffb;
 }
 
 /*
