Fix minor issue with login dialog.
 * Unnecessary postback removed.
 * Animated the wrong panel.

--- a/wwwroot/jabber.se/jabber.se.css
+++ b/wwwroot/jabber.se/jabber.se.css
@@ -304,7 +304,7 @@ div.wfid_login_dialog {
     z-index: 10;
 }
 
-div.wfid_login_dialog > div {
+div.wfid_login_dialog {
     /* position */
     position: absolute;
     width: 220px;
