Added note about Email not being published to registration view.

--- a/wwwroot/jabber.se/jabber.se.css
+++ b/wwwroot/jabber.se/jabber.se.css
@@ -40,6 +40,10 @@ textarea {
     border: 2px solid #ffffff;
 }
 
+label.small {
+    font-size: 10px;
+}
+
 span.contact {
     font-weight: bold;
 }
